<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegistrationForm</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
<string name= "course">Courses</string>
<string name= "School">Previous Schools</string>


<string-array name="course_array">
 <item >Mobile computing</item>
 <item >Database</item>
 <item>Operating system</item>
 <item>Advance java</item>
 <item >Networking</item>
        
</string-array>



<string-array name="school_array">
 <item >Lutheran Juniour Seminary</item>
 <item >Azania</item>
 <item>Songea girls</item>
 <item>Kilakala</item>
 <item >Jangwani</item>
        
</string-array>
<string name="Course">Course</string>
<string name="REGISTER">REGISTER</string>
<string name="Password">Password</string>
<string name="Male">Male</string>
<string name="Female">Female</string>
<string name="GENDER">GENDER</string>
<string name="Previous_School">Previous School</string>
<string name="AGE">AGE</string>
<string name="Student_ID">Student ID</string>
<string name="Enter_your_name">Enter your name</string>



</resources>
